fixed button size on mobile. Added variable disabled on variables.scss. Changed padding bottom on .hero

--- a/src/assets/variables.scss
+++ b/src/assets/variables.scss
@@ -12,6 +12,7 @@ $blue-hover: #F3F7FF;
 $base: #283256;
 $deactivate: #D8DADE;
 $secondary: #676767;
+$disabled: #A3D7FF;
 //font
 $uniBook: 'Uni Neue Book';
 $uni: 'Uni Neue';
